# adventofcode

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cargo.yml
2023/: Cargo.toml
2023/day1/: Cargo.toml
2023/day1/src/: main.rs
2023/day10/: Cargo.toml
2023/day10/src/: main.rs  part1.rs  part2.rs
2023/day11/: Cargo.toml
2023/day11/src/: main.rs
2023/day12/: Cargo.toml
2023/day12/src/: main.rs
2023/day13/: Cargo.toml  README.md
2023/day14/: Cargo.toml
2023/day15/: Cargo.toml
2023/day16/: Cargo.toml
2023/day17/: Cargo.toml
2023/day18/: Cargo.toml
2023/day19/: Cargo.toml
2023/day2/: Cargo.toml
2023/day20/: Cargo.toml
2023/day21/: Cargo.toml  input.txt
2023/day22/: Cargo.toml
2023/day23/: Cargo.toml
2023/day24/: Cargo.toml
2023/day25/: Cargo.toml
2023/day3/: Cargo.toml
2023/day4/: Cargo.toml
2023/day5/: Cargo.toml  README.md
2023/day6/: Cargo.toml
2023/day7/: Cargo.toml
2023/day8/: Cargo.toml
2023/day9/: Cargo.toml
2024/: Cargo.toml
2024/day1/: Cargo.toml
2024/day1/src/: main.rs
2024/day10/: Cargo.toml
2024/day10/src/: main.rs
2024/day11/: Cargo.toml
2024/day11/src/: main.rs
2024/day12/: Cargo.toml
2024/day12/src/: main.rs
2024/day13/: Cargo.toml
2024/day13/src/: main.rs
2024/day14/: Cargo.toml
2024/day14/src/: main.rs
2024/day2/: Cargo.toml
2024/day2/src/: main.rs
2024/day3/: .gitignore  Cargo.toml
2024/day3/src/: main.rs
2024/day4/: Cargo.toml
2024/day4/src/: main.rs
2024/day5/: Cargo.toml
2024/day5/src/: main.rs
2024/day6/: Cargo.toml
2024/day6/src/: main.rs
2024/day7/: Cargo.toml
2024/day7/src/: main.rs
2024/day8/: Cargo.toml
2024/day8/src/: main.rs
2024/day9/: Cargo.toml
2024/day9/src/: main.rs
day1/src/: main.rs
day3/src/: main.rs
day4/src/: main.rs
day7/src/: hand.rs  main.rs
template/: Cargo.toml  build.rs  cargo-generate.toml
template/src/: main.rs
(+25 files in other folders)
