[workspace]
resolver = "2"
members = ["day*"]

[workspace.dependencies]
itertools = "0.13.0"
pathfinding = "4.11.0"
rayon = "1.10.0"
regex = "1.10.2"
indexmap = { version = "2.7.0", features = ["rayon"] }
hashbrown = { version = "0.15.2", features = ["rayon", "nightly"] }
fix_fn = { git = "https://github.com/mirsella/fix_fn" }
