[package]
name = "day13"
authors = ["mirsella <mirsella@protonmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex.workspace = true
itertools = { workspace = true }
pathfinding = { workspace = true }
rayon = { workspace = true }
indexmap = { workspace = true }
hashbrown = { workspace = true }
fix_fn = { workspace = true }
good_lp = { version = "1.10.0", default-features = false, features = [
  "minilp",
] }
